# rustcraft

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  rustfmt.toml
assets/fonts/: vsr.fnt
assets/shaders/: 2d_texture.frag  2d_texture.frag.spv  2d_texture.vert  2d_texture.vert.spv  2d_texture.wgsl  3d_texture.frag  3d_texture.vert  3d_texture.vert.spv  3d_texture.wgsl  line.frag  line.vert  line.vert.spv  line.wgsl
src/: atlas.rs  bitmap_font.rs  block.rs  camera.rs  chunk.rs  coordinate.rs  crosshair.rs  engine.rs  framerate.rs  main.rs  noise.rs  overlay_info.rs  player.rs  ray_tracer.rs  renderer.rs  texture.rs  world.rs  world_generation.rs
