[package]
name = "rustcraft"
version = "0.1.0"
authors = ["Raphael <dskart11@gmail.com>"]
edition = "2018"


[dependencies]
num = "0.4"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
clap = "2.33.3"
image = "0.23"
png = "0.16.8"
winit = "0.25.0"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
futures = "0.3"
smol = "1.2.5"
anyhow = "1.0.37"
bytemuck = { version = "1.4", features = [ "derive" ] }
indicatif = "0.16.0"
rayon = "1.5"
noise = { git = "https://github.com/Razaekel/noise-rs", rev= "73e7613dde9b768fae8cd0d05d72828dbe8afc69"}
rand = "0.8.0"
wgpu = "0.8.1"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"

[profile.dev.package."*"]
opt-level = 3
